# ryzen-vf-analysis

./: .env  .gitignore  README.md  main.py  pyproject.toml  pyrightconfig.json
docs/: duplicate_functions.md
notebooks/: vf_analysis.ipynb  vf_exploration.ipynb
notebooks/outputs/: summary.md
scripts/: quick_plots.py
src/vf_analysis/: __init__.py  features.py  filters.py  load_hwinfo.py  metrics.py  pipeline1.py  plots.py  processing.py  vf_curve_fit.py
src/vfanalysis/: __init__.py  _shared.py  features.py  filters.py  io.py  metrics.py  plots.py  regressions.py  ridge.py  vfcurve.py  workflow.py
