[project]
name = "ryzen-vf-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jupyterlab>=4.5.6",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "polars>=1.38.1",
    "python-dotenv>=1.2.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
]
